--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,11 @@ h2 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     color: #484747;
 }
+h3 {
+    font-size: 1.3em;
+    line-height: 1.4em;
+    color: #484747;
+}
 p {
     font-size: 1.1em;
     line-height: 1.4em;
